# OpenFOAM-PhD-Extensions

./: .gitignore  README.md
bubbleqmom-dev/src/: Allwclean  Allwmake
bubbleqmom-dev/src/meshTools/interpolateData/nearestNeighbour/include/: CMakeLists.txt  card.c  dataBlock.c  dataBlock.h  dynamicStore.c  dynamicStore.h  grid.c  grid.h  mem_inlines.h  nn.c  nn.h  node.c  rect.c  rtree.c  rtree.h  split_l.c  split_l.h  split_q.h  test.c  test.x  test_dataBlock.c  test_grid.c  test_nn.c  test_nn.cpp
bubbleqmom-dev/src/meshTools/interpolateData/nearestNeighbour/include/none/: split_q.c
calcEpsilon/: calcEpsilon.C  createFields.H  readCalcOmegaDict.H
calcEpsilon/Make/: files
calcOmega/: .createFields.H.swp  calcOmega.C  createFields.H
calcOmega/Make/: files
calcRST/: calcRST.C  createFields.H
calcRST/Make/: files
periodicTimeVaryingMappedFixedValue/: periodicTimeVaryingMappedFixedValueFvPatchFields.C  periodicTimeVaryingMappedFixedValueFvPatchFieldsFwd.H
periodicTimeVaryingMappedFixedValue/Make/: files
perturbU/perturbUDuct/: perturbU.C  perturbUDict
perturbU/perturbUGeneric/: perturbU.C
pimpleFoam_calcMean/: TimeAverager.H  createResolvedFields.H  pEqn.H  pimpleFoam_calcMean.C
pimpleFoam_calcRes/: createResolvedLESFields.H  pimpleFoam_calcRes.C
pimpleFoam_calcRes_Qsas_n20/: .nfs0000000e07574f580000341d  createFields.H  pimpleFoam_calcRes_Qsas_n20.C
pimpleFoam_calcRes_S2W2/: TimeAverager.H  createResolvedFields.H  pimpleFoam_calcRes_S2W2.C
porousBafflePressureAMI/: porousBafflePressureAMIFvPatchField.C  porousBafflePressureAMIFvPatchField.H
(+260 files in other folders)
